syntax = "proto3";
package com.popugaevvn.grpc;

message PutInCacheRequest {
  string key = 1;
  int32 value = 2;
}

message PutInCacheResponse {
  int32 value = 1;
}

message GetFromCacheRequest {
  string key = 1;
}

message GetFromCacheResponse {
  int32 value = 1;
}

message RemoveFromCacheRequest {
  string key = 1;
}


message RemoveFromCacheResponse {}

service CacheService {

  rpc putInCache(PutInCacheRequest) returns (PutInCacheResponse);

  rpc getFromCache(GetFromCacheRequest) returns (GetFromCacheResponse);

  rpc removeFromCache(RemoveFromCacheRequest) returns (RemoveFromCacheResponse);

}